// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TransactionRow > should omit the currency for transactions from test networks 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="table-row relative border-b border-dashed transition-colors duration-100 cursor-pointer last:border-b-0 border-theme-secondary-300 table-row-unselected group dark:border-theme-secondary-800"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex items-start py-1 px-3 pr-0 pl-3 my-0 ml-3 rounded-l transition-colors duration-100 lg:pr-3 xl:pt-2.5 xl:max-h-11 min-h-[66px] md-lg:min-h-14 lg:min-w-36 xl:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex flex-col gap-1 font-semibold"
            >
              <div
                class="flex flex-col gap-1 font-semibold"
              >
                <a
                  class="inline-block relative space-x-1 font-semibold no-underline transition-colors cursor-pointer text-theme-primary-600 ring-focus group/inner dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden active:text-theme-primary-400"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                  rel="noopener noreferrer"
                >
                  <span
                    class="break-all border-b border-transparent transition-colors duration-200 delay-100 hover:border-current"
                  >
                    <span
                      class="text-sm"
                    >
                      <span
                        class="cursor-pointer no-ligatures text-theme-primary-600"
                        data-testid="TransactionRow__id"
                      >
                        ea63b…5c79b
                      </span>
                    </span>
                  </span>
                </a>
              </div>
              <span
                class="text-xs xl:hidden text-theme-secondary-700"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden xl:table-cell"
          data-testid="TransactionRow__timestamp"
        >
          <div
            class="flex items-start px-3 my-1 text-sm font-semibold transition-colors duration-100 xl:pt-3 xl:max-h-11 text-theme-secondary-900 min-h-11 xl:min-w-32 dark:group-hover:bg-theme-dark-950 dark:text-theme-secondary-200 group-hover:bg-theme-secondary-200"
          >
            <span
              data-testid="TimeAgo"
            >
              A few seconds ago
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex items-start py-1 px-3 my-0 transition-colors duration-100 lg:w-24 xl:pt-3 xl:w-auto min-h-[66px] md-lg:min-h-14 md-lg:pt-2 lg:min-w-24 xl:min-h-11 xl:min-w-38 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="inline-block overflow-hidden px-1 text-xs font-semibold whitespace-nowrap rounded dark:bg-transparent dark:border no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 leading-[15px] max-w-40 truncate py-[3px] dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:group-hover:bg-transparent group-hover:bg-theme-secondary-300"
              data-testid="TransactionRow__type"
            >
              Transfer
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="flex items-start py-2 px-0 my-1 space-x-4 transition-colors duration-100 lg:px-3 xl:pt-3 min-h-16 xl:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex flex-col gap-2 grow"
            >
              <div
                class="flex flex-row gap-2 w-full"
                data-testid="TransactionRowAddressing__container_advanced_sender"
              >
                <div
                  class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] flex! h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                  data-testid="TransactionRowAddressing__label"
                >
                  From
                </div>
                <div
                  class="flex justify-between items-center space-x-4 min-w-36 grow"
                >
                  <div
                    class="grow"
                    data-testid="TransactionRowAddressing__address-container"
                  >
                    <div
                      class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                    >
                      <span
                        class="text-sm font-semibold text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="transition-colors duration-200 no-ligatures"
                          data-testid="TruncateEnd"
                        >
                          Mainsail Wallet …
                        </span>
                      </span>
                    </div>
                  </div>
                  <button
                    class="relative cursor-pointer ring-focus focus:outline-hidden"
                    data-ring-focus-margin="-m-1"
                    data-testid="clipboard-icon__wrapper"
                    type="button"
                  >
                    <div
                      class="text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:text-white hover:text-theme-primary-700"
                    >
                      <div
                        style="height: 16px; width: 16px;"
                      >
                        <svg
                          id="copy"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                            />
                            <path
                              d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="md-lg:hidden"
              >
                <div
                  class="flex flex-row gap-2 w-full"
                  data-testid="TransactionRowAddressing__container_advanced_recipient"
                >
                  <div
                    class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] flex! h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                    data-testid="TransactionRowAddressing__label"
                  >
                    To
                  </div>
                  <div
                    class="flex justify-between items-center space-x-4 min-w-36 grow"
                  >
                    <div
                      class="grow"
                      data-testid="TransactionRowAddressing__address-container"
                    >
                      <div
                        class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                      >
                        <span
                          class="text-sm font-semibold text-theme-text"
                          data-testid="Address__alias"
                        >
                          <span
                            class="transition-colors duration-200 no-ligatures"
                            data-testid="TruncateEnd"
                          >
                            Mainsail Wallet …
                          </span>
                        </span>
                      </div>
                    </div>
                    <button
                      class="relative cursor-pointer ring-focus focus:outline-hidden"
                      data-ring-focus-margin="-m-1"
                      data-testid="clipboard-icon__wrapper"
                      type="button"
                    >
                      <div
                        class="text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:text-white hover:text-theme-primary-700"
                      >
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="copy"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                              />
                              <path
                                d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden md-lg:table-cell"
        >
          <div
            class="flex items-start py-2 px-0 my-1 space-x-4 transition-colors duration-100 lg:px-3 xl:pt-3 min-h-16 lg:min-w-36 xl:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex flex-row gap-2 w-full"
              data-testid="TransactionRowAddressing__container_advanced_recipient"
            >
              <div
                class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] flex! h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                data-testid="TransactionRowAddressing__label"
              >
                To
              </div>
              <div
                class="flex justify-between items-center space-x-4 min-w-36 grow"
              >
                <div
                  class="grow"
                  data-testid="TransactionRowAddressing__address-container"
                >
                  <div
                    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                  >
                    <span
                      class="text-sm font-semibold text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="transition-colors duration-200 no-ligatures"
                        data-testid="TruncateEnd"
                      >
                        Mainsail Wallet …
                      </span>
                    </span>
                  </div>
                </div>
                <button
                  class="relative cursor-pointer ring-focus focus:outline-hidden"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:text-white hover:text-theme-primary-700"
                  >
                    <div
                      style="height: 16px; width: 16px;"
                    >
                      <svg
                        id="copy"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                          />
                          <path
                            d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden"
        >
          <div
            class="flex items-start px-0 pt-2 my-1 mt-1 space-x-4 transition-colors duration-100 lg:px-3 xl:pt-3 min-h-14 lg:min-w-36 xl:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex flex-row gap-2 w-full"
              data-testid="TransactionRowAddressing__container"
            >
              <div
                class="inline-block font-semibold overflow-hidden no-ligatures text-theme-danger-info-text bg-theme-danger-info-background dark:bg-transparent dark:border-theme-danger-info-border text-xs leading-[15px] flex! h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                data-testid="TransactionRowAddressing__label"
              >
                To
              </div>
              <div
                class="flex justify-between items-center space-x-4 min-w-36 grow"
              >
                <div
                  class="grow"
                  data-testid="TransactionRowAddressing__address-container"
                >
                  <div
                    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                  >
                    <span
                      class="text-sm font-semibold text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="transition-colors duration-200 no-ligatures"
                        data-testid="TruncateEnd"
                      >
                        Mainsail Wallet …
                      </span>
                    </span>
                  </div>
                </div>
                <button
                  class="relative cursor-pointer ring-focus focus:outline-hidden"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:text-white hover:text-theme-primary-700"
                  >
                    <div
                      style="height: 16px; width: 16px;"
                    >
                      <svg
                        id="copy"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                          />
                          <path
                            d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex justify-end items-start px-3 pt-2 my-1 transition-colors duration-100 xl:pt-3 xl:my-0 xl:w-auto min-h-14 lg:w-34 xl:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex flex-col gap-1 items-end"
            >
              <span
                class="text-sm font-semibold whitespace-nowrap"
                data-testid="Amount"
              >
                121
              </span>
              <span
                class="text-xs font-semibold lg:hidden text-theme-secondary-700"
                data-testid="TransactionRow__exchange-currency"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 ARK
                </span>
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex justify-end items-start py-1 px-3 pr-3 my-0 mr-3 text-sm font-semibold rounded-r transition-colors duration-100 xl:pt-3 xl:my-0 text-theme-secondary-900 min-h-[66px] md-lg:min-h-14 md-lg:pt-2 xl:min-h-11 dark:group-hover:bg-theme-dark-950 dark:text-theme-secondary-200 group-hover:bg-theme-secondary-200"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              0 ARK
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRow > should render responsive 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 border-dashed cursor-pointer table-row table-row-unselected group group border-b-0!"
        data-testid="TableRow"
      >
        <td
          data-testid="TableRow__mobile"
        >
          <div
            class="overflow-hidden mb-3 w-full bg-white rounded border cursor-pointer border-theme-secondary-300 dark:border-theme-secondary-800 dark:bg-theme-background"
          >
            <div
              class="flex justify-between items-center px-4 w-full h-10 dark:bg-black bg-theme-secondary-100"
            >
              <div
                class="max-w-32"
              >
                <div
                  class="flex flex-col gap-1 font-semibold"
                >
                  <a
                    class="inline-block relative space-x-1 font-semibold no-underline transition-colors cursor-pointer text-theme-primary-600 ring-focus group/inner dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden active:text-theme-primary-400"
                    data-ring-focus-margin="-m-1"
                    data-testid="Link"
                    href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                    rel="noopener noreferrer"
                  >
                    <span
                      class="break-all border-b border-transparent transition-colors duration-200 delay-100 hover:border-current"
                    >
                      <span
                        class="text-sm"
                      >
                        <span
                          class="cursor-pointer no-ligatures text-theme-primary-600"
                          data-testid="TransactionRow__id"
                        >
                          ea63…c79b
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
              <div
                class="flex flex-row items-center"
              >
                <span
                  class="text-sm font-semibold sm:block text-theme-secondary-700"
                  data-testid="TransactionRow__timestamp"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </span>
              </div>
            </div>
            <div
              class="flex flex-col gap-4 px-4 pt-3 pb-4 w-full sm:grid sm:pb-4 sm:grid-cols-[200px_auto_130px]"
            >
              <div
                class="flex flex-col gap-2 w-full"
                data-testid="TransactionRowMobile__label"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Transfer
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="flex flex-col gap-2"
                  >
                    <div
                      class="flex flex-row gap-2 w-full"
                      data-testid="TransactionRowAddressing__container_advanced_sender"
                    >
                      <div
                        class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] flex! h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                        data-testid="TransactionRowAddressing__label"
                      >
                        From
                      </div>
                      <div
                        class="flex justify-between items-center space-x-4 min-w-36 grow"
                      >
                        <div
                          class="grow"
                          data-testid="TransactionRowAddressing__address-container"
                        >
                          <div
                            class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                          >
                            <span
                              class="text-sm font-semibold text-theme-text"
                              data-testid="Address__alias"
                            >
                              <span
                                class="transition-colors duration-200 no-ligatures"
                                data-testid="TruncateEnd"
                              >
                                Mainsail Wallet …
                              </span>
                            </span>
                          </div>
                        </div>
                        <button
                          class="relative cursor-pointer ring-focus focus:outline-hidden"
                          data-ring-focus-margin="-m-1"
                          data-testid="clipboard-icon__wrapper"
                          type="button"
                        >
                          <div
                            class="text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:text-white hover:text-theme-primary-700"
                          >
                            <div
                              style="height: 16px; width: 16px;"
                            >
                              <svg
                                id="copy"
                                style="height: 100%; width: 100%;"
                                viewBox="0 0 20 20"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <g
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                >
                                  <path
                                    d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                  />
                                  <path
                                    d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </button>
                      </div>
                    </div>
                    <div
                      class="flex flex-row gap-2 w-full"
                      data-testid="TransactionRowAddressing__container_advanced_recipient"
                    >
                      <div
                        class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] flex! h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                        data-testid="TransactionRowAddressing__label"
                      >
                        To
                      </div>
                      <div
                        class="flex justify-between items-center space-x-4 min-w-36 grow"
                      >
                        <div
                          class="grow"
                          data-testid="TransactionRowAddressing__address-container"
                        >
                          <div
                            class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                          >
                            <span
                              class="text-sm font-semibold text-theme-text"
                              data-testid="Address__alias"
                            >
                              <span
                                class="transition-colors duration-200 no-ligatures"
                                data-testid="TruncateEnd"
                              >
                                Mainsail Wallet …
                              </span>
                            </span>
                          </div>
                        </div>
                        <button
                          class="relative cursor-pointer ring-focus focus:outline-hidden"
                          data-ring-focus-margin="-m-1"
                          data-testid="clipboard-icon__wrapper"
                          type="button"
                        >
                          <div
                            class="text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:text-white hover:text-theme-primary-700"
                          >
                            <div
                              style="height: 16px; width: 16px;"
                            >
                              <svg
                                id="copy"
                                style="height: 100%; width: 100%;"
                                viewBox="0 0 20 20"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <g
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                >
                                  <path
                                    d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                  />
                                  <path
                                    d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Amount (ARK)
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <span
                    class="text-sm font-semibold whitespace-nowrap"
                    data-testid="Amount"
                  >
                    121
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Fiat Value
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    $0.00
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRow > should render responsive 2`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 border-b last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800 border-dashed cursor-pointer table-row table-row-unselected group group border-b-0!"
        data-testid="TableRow"
      >
        <td
          data-testid="TableRow__mobile"
        >
          <div
            class="overflow-hidden mb-3 w-full bg-white rounded border cursor-pointer border-theme-secondary-300 dark:border-theme-secondary-800 dark:bg-theme-background"
          >
            <div
              class="flex justify-between items-center px-4 w-full h-10 dark:bg-black bg-theme-secondary-100"
            >
              <div
                class="max-w-32"
              >
                <div
                  class="flex flex-col gap-1 font-semibold"
                >
                  <a
                    class="inline-block relative space-x-1 font-semibold no-underline transition-colors cursor-pointer text-theme-primary-600 ring-focus group/inner dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden active:text-theme-primary-400"
                    data-ring-focus-margin="-m-1"
                    data-testid="Link"
                    href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                    rel="noopener noreferrer"
                  >
                    <span
                      class="break-all border-b border-transparent transition-colors duration-200 delay-100 hover:border-current"
                    >
                      <span
                        class="text-sm"
                      >
                        <span
                          class="cursor-pointer no-ligatures text-theme-primary-600"
                          data-testid="TransactionRow__id"
                        >
                          ea63…c79b
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
              <div
                class="flex flex-row items-center"
              >
                <span
                  class="text-sm font-semibold sm:block text-theme-secondary-700"
                  data-testid="TransactionRow__timestamp"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </span>
              </div>
            </div>
            <div
              class="flex flex-col gap-4 px-4 pt-3 pb-4 w-full sm:grid sm:pb-4 sm:grid-cols-[200px_auto_130px]"
            >
              <div
                class="flex flex-col gap-2 w-full"
                data-testid="TransactionRowMobile__label"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Transfer
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="flex flex-col gap-2"
                  >
                    <div
                      class="flex flex-row gap-2 w-full"
                      data-testid="TransactionRowAddressing__container_advanced_sender"
                    >
                      <div
                        class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] flex! h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                        data-testid="TransactionRowAddressing__label"
                      >
                        From
                      </div>
                      <div
                        class="flex justify-between items-center space-x-4 min-w-36 grow"
                      >
                        <div
                          class="grow"
                          data-testid="TransactionRowAddressing__address-container"
                        >
                          <div
                            class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                          >
                            <span
                              class="text-sm font-semibold text-theme-text"
                              data-testid="Address__alias"
                            >
                              <span
                                class="transition-colors duration-200 no-ligatures"
                                data-testid="TruncateEnd"
                              >
                                Mainsail Wallet …
                              </span>
                            </span>
                          </div>
                        </div>
                        <button
                          class="relative cursor-pointer ring-focus focus:outline-hidden"
                          data-ring-focus-margin="-m-1"
                          data-testid="clipboard-icon__wrapper"
                          type="button"
                        >
                          <div
                            class="text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:text-white hover:text-theme-primary-700"
                          >
                            <div
                              style="height: 16px; width: 16px;"
                            >
                              <svg
                                id="copy"
                                style="height: 100%; width: 100%;"
                                viewBox="0 0 20 20"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <g
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                >
                                  <path
                                    d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                  />
                                  <path
                                    d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </button>
                      </div>
                    </div>
                    <div
                      class="flex flex-row gap-2 w-full"
                      data-testid="TransactionRowAddressing__container_advanced_recipient"
                    >
                      <div
                        class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] flex! h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                        data-testid="TransactionRowAddressing__label"
                      >
                        To
                      </div>
                      <div
                        class="flex justify-between items-center space-x-4 min-w-36 grow"
                      >
                        <div
                          class="grow"
                          data-testid="TransactionRowAddressing__address-container"
                        >
                          <div
                            class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                          >
                            <span
                              class="text-sm font-semibold text-theme-text"
                              data-testid="Address__alias"
                            >
                              <span
                                class="transition-colors duration-200 no-ligatures"
                                data-testid="TruncateEnd"
                              >
                                Mainsail Wallet …
                              </span>
                            </span>
                          </div>
                        </div>
                        <button
                          class="relative cursor-pointer ring-focus focus:outline-hidden"
                          data-ring-focus-margin="-m-1"
                          data-testid="clipboard-icon__wrapper"
                          type="button"
                        >
                          <div
                            class="text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:text-white hover:text-theme-primary-700"
                          >
                            <div
                              style="height: 16px; width: 16px;"
                            >
                              <svg
                                id="copy"
                                style="height: 100%; width: 100%;"
                                viewBox="0 0 20 20"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <g
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                >
                                  <path
                                    d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                                  />
                                  <path
                                    d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Amount (ARK)
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <span
                    class="text-sm font-semibold whitespace-nowrap"
                    data-testid="Amount"
                  >
                    121
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Fiat Value
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    $0.00
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRow > should render with currency 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="table-row relative border-b border-dashed transition-colors duration-100 cursor-pointer last:border-b-0 border-theme-secondary-300 table-row-unselected group dark:border-theme-secondary-800"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex items-start py-1 px-3 pr-0 pl-3 my-0 ml-3 rounded-l transition-colors duration-100 lg:pr-3 xl:pt-2.5 xl:max-h-11 min-h-[66px] md-lg:min-h-14 lg:min-w-36 xl:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex flex-col gap-1 font-semibold"
            >
              <div
                class="flex flex-col gap-1 font-semibold"
              >
                <a
                  class="inline-block relative space-x-1 font-semibold no-underline transition-colors cursor-pointer text-theme-primary-600 ring-focus group/inner dark:hover:text-theme-primary-500 hover:text-theme-primary-700 focus:outline-hidden active:text-theme-primary-400"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                  rel="noopener noreferrer"
                >
                  <span
                    class="break-all border-b border-transparent transition-colors duration-200 delay-100 hover:border-current"
                  >
                    <span
                      class="text-sm"
                    >
                      <span
                        class="cursor-pointer no-ligatures text-theme-primary-600"
                        data-testid="TransactionRow__id"
                      >
                        ea63b…5c79b
                      </span>
                    </span>
                  </span>
                </a>
              </div>
              <span
                class="text-xs xl:hidden text-theme-secondary-700"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden xl:table-cell"
          data-testid="TransactionRow__timestamp"
        >
          <div
            class="flex items-start px-3 my-1 text-sm font-semibold transition-colors duration-100 xl:pt-3 xl:max-h-11 text-theme-secondary-900 min-h-11 xl:min-w-32 dark:group-hover:bg-theme-dark-950 dark:text-theme-secondary-200 group-hover:bg-theme-secondary-200"
          >
            <span
              data-testid="TimeAgo"
            >
              A few seconds ago
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex items-start py-1 px-3 my-0 transition-colors duration-100 lg:w-24 xl:pt-3 xl:w-auto min-h-[66px] md-lg:min-h-14 md-lg:pt-2 lg:min-w-24 xl:min-h-11 xl:min-w-38 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="inline-block overflow-hidden px-1 text-xs font-semibold whitespace-nowrap rounded dark:bg-transparent dark:border no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 leading-[15px] max-w-40 truncate py-[3px] dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:group-hover:bg-transparent group-hover:bg-theme-secondary-300"
              data-testid="TransactionRow__type"
            >
              Transfer
            </div>
          </div>
        </td>
        <td
          class=""
        >
          <div
            class="flex items-start py-2 px-0 my-1 space-x-4 transition-colors duration-100 lg:px-3 xl:pt-3 min-h-16 xl:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex flex-col gap-2 grow"
            >
              <div
                class="flex flex-row gap-2 w-full"
                data-testid="TransactionRowAddressing__container_advanced_sender"
              >
                <div
                  class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] flex! h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                  data-testid="TransactionRowAddressing__label"
                >
                  From
                </div>
                <div
                  class="flex justify-between items-center space-x-4 min-w-36 grow"
                >
                  <div
                    class="grow"
                    data-testid="TransactionRowAddressing__address-container"
                  >
                    <div
                      class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                    >
                      <span
                        class="text-sm font-semibold text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="transition-colors duration-200 no-ligatures"
                          data-testid="TruncateEnd"
                        >
                          Mainsail Wallet …
                        </span>
                      </span>
                    </div>
                  </div>
                  <button
                    class="relative cursor-pointer ring-focus focus:outline-hidden"
                    data-ring-focus-margin="-m-1"
                    data-testid="clipboard-icon__wrapper"
                    type="button"
                  >
                    <div
                      class="text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:text-white hover:text-theme-primary-700"
                    >
                      <div
                        style="height: 16px; width: 16px;"
                      >
                        <svg
                          id="copy"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                            />
                            <path
                              d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="md-lg:hidden"
              >
                <div
                  class="flex flex-row gap-2 w-full"
                  data-testid="TransactionRowAddressing__container_advanced_recipient"
                >
                  <div
                    class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] flex! h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                    data-testid="TransactionRowAddressing__label"
                  >
                    To
                  </div>
                  <div
                    class="flex justify-between items-center space-x-4 min-w-36 grow"
                  >
                    <div
                      class="grow"
                      data-testid="TransactionRowAddressing__address-container"
                    >
                      <div
                        class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                      >
                        <span
                          class="text-sm font-semibold text-theme-text"
                          data-testid="Address__alias"
                        >
                          <span
                            class="transition-colors duration-200 no-ligatures"
                            data-testid="TruncateEnd"
                          >
                            Mainsail Wallet …
                          </span>
                        </span>
                      </div>
                    </div>
                    <button
                      class="relative cursor-pointer ring-focus focus:outline-hidden"
                      data-ring-focus-margin="-m-1"
                      data-testid="clipboard-icon__wrapper"
                      type="button"
                    >
                      <div
                        class="text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:text-white hover:text-theme-primary-700"
                      >
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="copy"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                              />
                              <path
                                d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden md-lg:table-cell"
        >
          <div
            class="flex items-start py-2 px-0 my-1 space-x-4 transition-colors duration-100 lg:px-3 xl:pt-3 min-h-16 lg:min-w-36 xl:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex flex-row gap-2 w-full"
              data-testid="TransactionRowAddressing__container_advanced_recipient"
            >
              <div
                class="inline-block font-semibold overflow-hidden no-ligatures text-theme-secondary-700 bg-theme-secondary-200 border-theme-secondary-200 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:bg-transparent group-hover:bg-theme-secondary-300 dark:group-hover:bg-transparent text-xs leading-[15px] flex! h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                data-testid="TransactionRowAddressing__label"
              >
                To
              </div>
              <div
                class="flex justify-between items-center space-x-4 min-w-36 grow"
              >
                <div
                  class="grow"
                  data-testid="TransactionRowAddressing__address-container"
                >
                  <div
                    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                  >
                    <span
                      class="text-sm font-semibold text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="transition-colors duration-200 no-ligatures"
                        data-testid="TruncateEnd"
                      >
                        Mainsail Wallet …
                      </span>
                    </span>
                  </div>
                </div>
                <button
                  class="relative cursor-pointer ring-focus focus:outline-hidden"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:text-white hover:text-theme-primary-700"
                  >
                    <div
                      style="height: 16px; width: 16px;"
                    >
                      <svg
                        id="copy"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                          />
                          <path
                            d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden"
        >
          <div
            class="flex items-start px-0 pt-2 my-1 mt-1 space-x-4 transition-colors duration-100 lg:px-3 xl:pt-3 min-h-14 lg:min-w-36 xl:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex flex-row gap-2 w-full"
              data-testid="TransactionRowAddressing__container"
            >
              <div
                class="inline-block font-semibold overflow-hidden no-ligatures text-theme-danger-info-text bg-theme-danger-info-background dark:bg-transparent dark:border-theme-danger-info-border text-xs leading-[15px] flex! h-[21px] w-12 min-w-12 items-center justify-center rounded px-1 py-[3px] dark:border"
                data-testid="TransactionRowAddressing__label"
              >
                To
              </div>
              <div
                class="flex justify-between items-center space-x-4 min-w-36 grow"
              >
                <div
                  class="grow"
                  data-testid="TransactionRowAddressing__address-container"
                >
                  <div
                    class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
                  >
                    <span
                      class="text-sm font-semibold text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="transition-colors duration-200 no-ligatures"
                        data-testid="TruncateEnd"
                      >
                        Mainsail Wallet …
                      </span>
                    </span>
                  </div>
                </div>
                <button
                  class="relative cursor-pointer ring-focus focus:outline-hidden"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:text-white hover:text-theme-primary-700"
                  >
                    <div
                      style="height: 16px; width: 16px;"
                    >
                      <svg
                        id="copy"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                          />
                          <path
                            d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex justify-end items-start px-3 pt-2 my-1 transition-colors duration-100 xl:pt-3 xl:my-0 xl:w-auto min-h-14 lg:w-34 xl:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <div
              class="flex flex-col gap-1 items-end"
            >
              <span
                class="text-sm font-semibold whitespace-nowrap"
                data-testid="Amount"
              >
                121
              </span>
              <span
                class="text-xs font-semibold lg:hidden text-theme-secondary-700"
                data-testid="TransactionRow__exchange-currency"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 ARK
                </span>
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex justify-end items-start py-1 px-3 pr-3 my-0 mr-3 text-sm font-semibold rounded-r transition-colors duration-100 xl:pt-3 xl:my-0 text-theme-secondary-900 min-h-[66px] md-lg:min-h-14 md-lg:pt-2 xl:min-h-11 dark:group-hover:bg-theme-dark-950 dark:text-theme-secondary-200 group-hover:bg-theme-secondary-200"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              0 ARK
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
